--- a/static/layout.html
+++ b/static/layout.html
@@ -69,38 +69,85 @@
 
 
 <!--   SEGUNDA NAVIGATION -->
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary navbar-custom border-3">
     <div class="container-xxl">
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse justify-content-end align-center navbar-sm" 
+        <div class="collapse navbar-collapse justify-content-start navbar-sm" 
         id="main-nav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a  class="nav-link text-white" href="#topics">About</a>
+                <li class="nav-item me-5">
+                    <a  class="nav-link text-light" href="#topics">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-grid"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/></svg>                  
+                        My Ads</a>
                 </li>
                 <!---->
-                <li class="nav-item">
-                    <a  class="nav-link text-white" href="#topics">About</a>
+                <li class="nav-item me-5">
+                    <a  class="nav-link text-white " href="#topics">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-circle"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
+                        Chat</a>
                 </li>
                 <!---->
-                <li class="nav-item">
-                    <a  class="nav-link text-white" href="#topics">About</a>
+                <li class="nav-item me-5">
+                    <a  class="nav-link text-white" href="#topics">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"/><path d="M13.73 21a2 2 0 0 1-3.46 0"/></svg>
+                        Notification</a>
                 </li>
                 <!---->
-                <li class="nav-item">
-                    <a  class="nav-link text-white" href="#topics">About</a>
+                <li class="nav-item ms-md-2 me-md-4 d-md-inline ">
+                    <button class="btn btn-light text-secondary btn-outline d-none d-sm-inline" id="announceBtn" href="#topics">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
+                        Announce
+                    </button>
+                    <a class="nav-link text-white d-sm-none" href="#topics">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-upload"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" y1="3" x2="12" y2="15"/></svg>
+                        Announce</a>
                 </li>
+
                 <!-- Login e Register movidos para a segunda navegação -->
                 <li class="nav-item d-md-none">
-                    <a class="nav-link text-white" href="#" id="loginMobile">Login</a>
+                    <a class="nav-link text-white" href="#" id="loginMobile">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-in"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
+                        Login</a>
                 </li>
                 <li class="nav-item d-md-none">
-                    <a class="nav-link text-white" href="#" id="registerMobile">Register</a>
+                    <a class="nav-link text-white" href="#" id="registerMobile">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-key"><path d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"/></svg>
+                        Sign-Up</a>
                 </li>
             </ul>
         </div>
     </div>
     <!-- End of nav-links -->
+    <nav>
+    <!-- Formulários fora da navegação -->
+    <div class=" d-flex justify-content-end mx-5  ">
+        <ul class="navbar-nav d-flex flex-row me-5 ">
+            <li class="nav-item me-1 text-primary ">
+                <form action="#" method="post" class="text-white row justify-content-end">
+                    <select name="st" class="form-select text-primary">
+                        <option disabled selected>ST </option>
+                        <option value="San Francisco">BA</option>
+                        <option value="New York">SP</option>
+                        <option value="Seattle">GO</option>
+                        <option value="Los Angeles">AM</option>
+                        <option value="Chicago">SC</option>
+                    </select>
+                </form>
+            </li>
+            <li class="nav-item text-primary ">
+                <form action="#" method="post" class="text-white" style="width:30vw;">
+                    <select name="categoria" class="form-select text-primary">
+                        <option disabled selected>Categoria</option>
+                        <option value="San Francisco">Imóveis</option>
+                        <option value="New York">Automoveis</option>
+                        <option value="Seattle">Eletrodomesticos</option>
+                        <option value="Los Angeles">Moda e Beleza</option>
+                        <option value="Chicago">Esporte e lazer</option>
+                    </select>
+                </form>
+            </li>
+        </ul>
+    </div>
 </nav>
  
 </body>
